--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
     <h1>Hello, again Mr Lasaki!!! :-)</h1>
     <p>This is just something.</p>
-    <p>Yip yipj!!!</p>
+    <p>Yip yip!!!</p>
 </html>
